# PyVSparse

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  IVCSC.html  PyVSparse.html  README.md  VCSC.html  api.html  cleanInstall  examples.html  genindex.html  implementedTests.py  index.html  ivcsc.py  newtest.py  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  test.py  unittest.py  vcsc.py
.doctrees/: IVCSC.doctree  PyVSparse.doctree  VCSC.doctree  api.doctree  environment.pickle  examples.doctree  index.doctree
.doctrees/api/: IVCSC.doctree  VCSC.doctree
.doctrees/examples/: constructor.doctree  io.doctree  operations.doctree  utilities.doctree
.github/workflows/: pip.yml  sphinx.yml  wheel.yml
_modules/: index.html
_modules/PyVSparse/: ivcsc.html  vcsc.html
_sources/: VCSC.rst.txt  api.rst.txt
api/: IVCSC.html  VCSC.html
docs/: requirements.txt
docs/source/: IVCSC.rst  VCSC.rst  api.rst  conf.py  index.rst
docs/source/examples/: operations.rst
examples/: constructor.html  io.html  operations.html  utilities.html
pybindBuild/: CMakeLists.txt  PreLoad.cmake  PyVSparse.hpp  setupParallelBuild.py
pybindBuild/classFiles/: double_2.cpp  double_3.cpp  float_2.cpp  float_3.cpp  int16_t_2.cpp  int16_t_3.cpp  int32_t_2.cpp  int32_t_3.cpp  int64_t_2.cpp  int64_t_3.cpp  int8_t_2.cpp  int8_t_3.cpp  uint16_t_2.cpp  uint16_t_3.cpp  uint32_t_2.cpp  uint32_t_3.cpp  uint64_t_2.cpp  uint64_t_3.cpp  uint8_t_2.cpp  uint8_t_3.cpp
src/: PyVSparse.cpp  PyVSparse.hpp
src/IVCSC/: IVCSC_Wrapper.cpp
src/IVSparse/: PyVSparse.cpp
src/IVSparse/IVCSC/: IVCSC_Wrapper.cpp
src/IVSparse/VCSC/: VCSC_Wrapper.cpp
src/PyVSparse/: __init__.py  ivcsc.py  vcsc.py
src/VCSC/: VCSC_Wrapper.cpp
tests/: devfeatureTests.py  test.py  tests.py
